force-app/main/default/objects/Contact_Creation_Event__e/Contact_Creation_Event__e.object-meta.xml
<CustomObject>
    <label>Contact_Creation_Event</label>
    <pluralLabel>Contact_Creation_Events</pluralLabel>
</CustomObject>