force-app/main/default/objects/Contact_Creation_Event__e/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>