force-app/main/default/objects/Contact_Creation_Event__e/fields/Other_Trading_Experience__c.field-meta.xml
<CustomField>
    <fullName>Other_Trading_Experience__c</fullName>
    <label>Other Trading Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>