force-app/main/default/objects/Contact_Creation_Event__e/fields/Trade_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Trade_Frequency__c</fullName>
    <label>Trade Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>