force-app/main/default/objects/Contact_Creation_Event__e/fields/Traded_in_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Traded_in_12_Months__c</fullName>
    <label>Traded in 12 Months</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>